# auto-push

./: .env.exemple  .gitignore  README.md  go.mod  go.sum  main.go  pyproject.toml
auto_push/: __main__.py  main.py
auto_push/commands/: cmd_checkup.py  cmd_setup.py  cmd_start.py  cmd_stop.py
auto_push/src/: constants.py  updater.py  utils.py
auto_push/src/classes/: env_loader.py  github.py  storage_manager.py  weather.py
auto_push/src/decorators/: error_issue.py
cmd/: config.go  profile.go  root.go  status.go
pkg/github/: client.go  profile.go
src/: main.py  updater.py
src/classes/: weather.py
